Title update to prefix with "Legacy"

--- a/AvaloniaVS.VS2022/AvaloniaVS.VS2022.csproj
+++ b/AvaloniaVS.VS2022/AvaloniaVS.VS2022.csproj
@@ -56,6 +56,10 @@
     <Content Include="Extension.vsext">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="license.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="overview.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -72,8 +76,8 @@
     </ItemGroup>
     <Error Text="No template files found." Condition="@(_TemplatePackage-&gt;Count()) == 0" />
     <Message Text="Template nuget packages found: @(_TemplatePackage)" Importance="low" />
-  <!-- don't modify the following, the pkgdef file uses the path below -->
-  <ItemGroup>
+    <!-- don't modify the following, the pkgdef file uses the path below -->
+    <ItemGroup>
       <VSIXSourceItem Include="@(_TemplatePackage)">
         <VSIXSubPath>ProjectTemplates\</VSIXSubPath>
       </VSIXSourceItem>
