--- a/.editorconfig
+++ b/.editorconfig
@@ -9,9 +9,9 @@ root = true
 [*]
 insert_final_newline = true
 indent_style = space
-indent_size = 4
+# indent_size = 4
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
-tab_width = 4
+# tab_width = 4
 end_of_line = crlf
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
@@ -31,6 +31,8 @@ dotnet_style_namespace_match_folder = true:suggestion
 
 # C# files
 [*.cs]
+indent_size = 2
+
 # New line preferences
 csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
